# Atlas

./: .gitignore  README.md  app_permissions_probe.json  asaas-local-mode.db  auth_users_latest_after_probe.json  build_errors.txt  build_errors_cmd.txt  index.html  lint_results.txt  marketplace.html  mcp_project_probe.txt  mcp_test_result.json  orphan_workspace_probe.json  package-lock.json  package.json  passkey_match_check.json  release.py  rotate_on_register_fix_live.json  rotation_inspect_live.json  script.py  signup_trigger_inspect.json  supabase_migration_result.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
Website/: index.html  package.json  tailwind.config.js  vite.config.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  DATABASE.md  DEPLOYMENT.md  FEATURES.md  NOTIFICATION_POPUP_SYSTEM.md  OVERVIEW.md  PLAN-active-resilience.md  PLAN-db-function-rationalization.md  PLAN-novu-unread-counter.md  PLAN-pos-background-sync.md  PLAN-pos-receipt-sync.md  PLAN-revenue-refinements.md  PLAN-sales-notes.md  PLAN-session-stability.md  PLAN-storage-inventory.md  PLAN-suppliers-customers-orders.md  README.md  RESILIENCE.md  SYNC_ENGINE.md
public/: firebase-messaging-sw.js  manifest.webmanifest
scripts/: bulk_rename.py
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: kds_server.rs  lib.rs  main.rs
supabase/: budget_allocations.sql  config.toml  expenses.sql  (+1 more)
(+382 files in other folders)
